quotes+markers+boders

--- a/ Narkomfin.html
+++ b/ Narkomfin.html
@@ -17,7 +17,7 @@
   background-position: top center;
   background-repeat: no-repeat;}
   </style>-->
-  <p>
+  <p >
     Жилой дом «переходного типа», построенный в <a style="color:grey" target="_blank" href="https://ru.wikipedia.org/wiki/1930_год">1930 году</a> по проекту архитекторов <a style="color:grey" target="_blank" href="https://ru.wikipedia.org/wiki/Гинзбург,_Моисей_Яковлевич">Моисея Гинзбурга</a> и <a style="color:grey" target="_blank" href="https://ru.wikipedia.org/wiki/Милинис,_Игнатий_Францевич">Игнатия Милиниса</a> для работников <a style="color:grey" target="_blank" href="https://ru.wikipedia.org/wiki/Народный_комиссариат_финансов_СССР">Народного комиссариата финансов СССР</a>(Наркомфина).Находится в Москве на <a style="color:grey" target="_blank" href="https://ru.wikipedia.org/wiki/Новинский_бульвар">Новинском бульваре</a> по адресу дом № 25, корпус 1. Дом Наркомфина является памятником архитектуры <a style="color:grey" target="_blank" href="https://ru.wikipedia.org/wiki/Конструктивизм_(искусство)">конструктивизма</a>.
   </p>
   <p>
@@ -75,7 +75,7 @@
     </li>
   </ol> -->
 <h2 id ="creation history">История создания</h2>
-  <p style="font-family: sans-serif;font-size: 20px;line-height: 25px;margin-top: 30px;">
+  <p>
     Дом Наркомфина построен по проекту одного из идеологов советского конструктивизма Моисея Гинзбурга Ранее,в соавторстве с архитектором
     <a target="_blank" href="https://ru.wikipedia.org/wiki/Милинис,_Игнатий_Францевич">Игнатием Милинисом</a> Игнатием Милинисом и инженером Сергеем Прохоровым.Ранее,в конце 1925 года была образована творческая организация конструктивистов, названная
     <a target="_blank"  <a target="_blank" href="https://ru.wikipedia.org/wiki/Объединение_современных_архитекторов">Объединением современных архитекторов</a>(ОСА). Эта организация оказала значительное влияние на развитие теоретической архитектурной мысли и ряд наработанных в ней решений позднее был использован при строительстве жилого комплекса.
@@ -107,7 +107,7 @@
   <p>
     Основной объём жилого дома Гинзбург расположил на территории двух усадебных садов, отмечая в пояснительной записке к проекту:
   </p>
-  <q >«В виду неровности участка, вызывающего в подобных случаях устройство большой поверхности цоколя, в настоящем случае дом поднят в большей своей части на высоту 2,5 метров на отдельных столбах, что является более экономичным и, кроме того, сохраняет нетронутой площадь парка»</q>
+  <div class="quote">«В виду неровности участка, вызывающего в подобных случаях устройство большой поверхности цоколя, в настоящем случае дом поднят в большей своей части на высоту 2,5 метров на отдельных столбах, что является более экономичным и, кроме того, сохраняет нетронутой площадь парка»</div>
   <!-- <p>
     «В виду неровности участка, вызывающего в подобных случаях устройство большой поверхности цоколя, в настоящем случае дом поднят в большей своей части на высоту 2,5 метров на отдельных столбах, что является более экономичным и, кроме того, сохраняет нетронутой площадь парка»
   </p>-->
@@ -196,9 +196,9 @@
   <p>
     Следует сказать, что контингент живущих был в какой-то мере однородным лишь в первые годы после заселения дома. После арестов 1937—1938 годов и окончания Великой Отечественной войны он существенным образом изменился. Практически все трёхкомнатные квартиры нижних этажей превратились в коммунальные. Как пишет в своих воспоминаниях о Доме Наркомфина Екатерина Милютина:
   </p>
-  <q>
+  <div class="quote">
     Квартиры для одиночек заселили семьями, семейные сделали коммунальными. Вместо закрытой столовой (коммунальный корпус) на пятом этаже сделали коммунальную кухню с рядами плит и корыт. Детский сад закрыли, коммунальный корпус превратился в типографию. Прачечная сохранилась, но она постепенно перестала обслуживать жильцов. В конце концов дом передали в ЖЭК, покрасили немыслимой жёлтой краской и перестали ремонтировать.
-  </q>
+  </div>
 <h2>Критика проекта</h2>
 <h3>С технической стороны</h3>
   <p>
@@ -232,15 +232,15 @@
   <p>
     Как пишут авторы монографии советского периода(1986),посвященной Дому Наркомфина:
   </p>
-  <q>
+  <div class="quote">
     Таким образом эксперимент с организацией новых форм ведения социально-бытового хозяйства для начала 1930-х годов был преждевременным и оказался несостоятельным.
-  </q>
+  </div>
   <p>
     В английском разделе Википедии данная мысль("Дом Наркомфина как реальность") выражена точнее:
   </p>
-  <q>
+  <div class="quote">
     Утопизм и стремление к реформированию повседневной жизни,положенные в основу проекта дома Наркомфина,впали в немилость практичнски сразу по его завершении.С началом пятилетки и консолидации власти Сталиным заложенные идеи коллективизма и феминизма были отвергнуты как левацкие и троцкистские.
-  </q>
+  </div>
 <h2>Известные жители</h2>
 <p>
   Дом заселялся в 1931 году (одновременно с заселением  <a target="_blank" href="https://ru.wikipedia.org/wiki/Дом_на_набережной">Дома на набережной</a> на улице Серафимовича, д. 2) представителями советской номенклатуры республиканского уровня. Наиболее заметные из них по своему положению занимали квартиры в верхних этажах и в торцах жилого корпуса. Позднее, в 1937—1938 годах, большинство из них были осуждены и расстреляны как «враги народа».(см.Ссылки).
