--- a/ Narkomfin.html
+++ b/ Narkomfin.html
@@ -17,7 +17,8 @@
   background-position: top center;
   background-repeat: no-repeat;}
   </style>-->
-  <p >
+  <img src="images/narkomfin.jpg" alt="Дом Наркомфина">
+  <p style="color:grey">
     Жилой дом «переходного типа», построенный в <a style="color:grey" target="_blank" href="https://ru.wikipedia.org/wiki/1930_год">1930 году</a> по проекту архитекторов <a style="color:grey" target="_blank" href="https://ru.wikipedia.org/wiki/Гинзбург,_Моисей_Яковлевич">Моисея Гинзбурга</a> и <a style="color:grey" target="_blank" href="https://ru.wikipedia.org/wiki/Милинис,_Игнатий_Францевич">Игнатия Милиниса</a> для работников <a style="color:grey" target="_blank" href="https://ru.wikipedia.org/wiki/Народный_комиссариат_финансов_СССР">Народного комиссариата финансов СССР</a>(Наркомфина).Находится в Москве на <a style="color:grey" target="_blank" href="https://ru.wikipedia.org/wiki/Новинский_бульвар">Новинском бульваре</a> по адресу дом № 25, корпус 1. Дом Наркомфина является памятником архитектуры <a style="color:grey" target="_blank" href="https://ru.wikipedia.org/wiki/Конструктивизм_(искусство)">конструктивизма</a>.
   </p>
   <p>
