--- a/ Narkomfin.html
+++ b/ Narkomfin.html
@@ -10,17 +10,11 @@
 </head>
 <h1 style=”font-size: 60px;”>Дом Наркомфина</h1>
 <body>
-  <!-- <style>
-  body{
-  background-image: url(dc-online-media-mockup.jpg);
-  background-size: 800px 20624px;
-  background-position: top center;
-  background-repeat: no-repeat;}
-  </style>-->
-  <img src="images/narkomfin.jpg" alt="Дом Наркомфина">
-  <p style="color:grey">
-    Жилой дом «переходного типа», построенный в <a style="color:grey" target="_blank" href="https://ru.wikipedia.org/wiki/1930_год">1930 году</a> по проекту архитекторов <a style="color:grey" target="_blank" href="https://ru.wikipedia.org/wiki/Гинзбург,_Моисей_Яковлевич">Моисея Гинзбурга</a> и <a style="color:grey" target="_blank" href="https://ru.wikipedia.org/wiki/Милинис,_Игнатий_Францевич">Игнатия Милиниса</a> для работников <a style="color:grey" target="_blank" href="https://ru.wikipedia.org/wiki/Народный_комиссариат_финансов_СССР">Народного комиссариата финансов СССР</a>(Наркомфина).Находится в Москве на <a style="color:grey" target="_blank" href="https://ru.wikipedia.org/wiki/Новинский_бульвар">Новинском бульваре</a> по адресу дом № 25, корпус 1. Дом Наркомфина является памятником архитектуры <a style="color:grey" target="_blank" href="https://ru.wikipedia.org/wiki/Конструктивизм_(искусство)">конструктивизма</a>.
+
+  <p>
+    Жилой дом переходного типа, построенный в <a target="_blank" href="https://ru.wikipedia.org/wiki/1930_год">1930 году</a> по проекту архитекторов <a target="_blank" href="https://ru.wikipedia.org/wiki/Гинзбург,_Моисей_Яковлевич">Моисея Гинзбурга</a> и <a  target="_blank" href="https://ru.wikipedia.org/wiki/Милинис,_Игнатий_Францевич">Игнатия Милиниса</a> для работников <a target="_blank" href="https://ru.wikipedia.org/wiki/Народный_комиссариат_финансов_СССР">Народного комиссариата финансов СССР</a>(Наркомфина).Находится в Москве на <a style="color:grey" target="_blank" href="https://ru.wikipedia.org/wiki/Новинский_бульвар">Новинском бульваре</a> по адресу дом № 25, корпус 1. Дом Наркомфина является памятником архитектуры <a style="color:grey" target="_blank" href="https://ru.wikipedia.org/wiki/Конструктивизм_(искусство)">конструктивизма</a>.
   </p>
+
   <p>
     Здание находится в аварийном состоянии и уже трижды включалось в список «100 главных зданий мира, которым грозит уничтожение».
   </p>
@@ -76,11 +70,7 @@
     </li>
   </ol> -->
 <h2 id ="creation history">История создания</h2>
-  <p>
-    Дом Наркомфина построен по проекту одного из идеологов советского конструктивизма Моисея Гинзбурга Ранее,в соавторстве с архитектором
-    <a target="_blank" href="https://ru.wikipedia.org/wiki/Милинис,_Игнатий_Францевич">Игнатием Милинисом</a> Игнатием Милинисом и инженером Сергеем Прохоровым.Ранее,в конце 1925 года была образована творческая организация конструктивистов, названная
-    <a target="_blank"  <a target="_blank" href="https://ru.wikipedia.org/wiki/Объединение_современных_архитекторов">Объединением современных архитекторов</a>(ОСА). Эта организация оказала значительное влияние на развитие теоретической архитектурной мысли и ряд наработанных в ней решений позднее был использован при строительстве жилого комплекса.
-  </p>
+  <p>Дом Наркомфина построен по проекту одного из идеологов советского конструктивизма Моисея Гинзбурга, в соавторстве с архитектором Игнатием Милинисом и инженером Сергеем Прохоровым. Ранее, в конце 1925 года была образована творческая организация конструктивистов, названная <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9E%D0%B1%D1%8A%D0%B5%D0%B4%D0%B8%D0%BD%D0%B5%D0%BD%D0%B8%D0%B5_%D1%81%D0%BE%D0%B2%D1%80%D0%B5%D0%BC%D0%B5%D0%BD%D0%BD%D1%8B%D1%85_%D0%B0%D1%80%D1%85%D0%B8%D1%82%D0%B5%D0%BA%D1%82%D0%BE%D1%80%D0%BE%D0%B2">Объединением современных архитекторов</a> (ОСА). Эта организация оказала значительное влияние на развитие теоретической мысли и ряд наработанных в ней решений позднее был использован при строительстве жилого комплекса.</p>
 <h2 id ="ideology">Идеология</h2>
   <p>
     Несмотря на то, что дом Наркомата финансов часто именуется «<a target="_blank" href="https://ru.wikipedia.org/wiki/Дом-коммуна">домом-коммуной</a>», автор проекта М. Гинзбург считал его домом переходного типа (от «буржуазного» дома к «социалистической» коммуне), поскольку в нём не полностью уничтожалась семейная структура, как это предполагалось в домах-коммунах. Называя его так, Гинзбург имел в виду, что обитатели оценят удобства общественного обслуживания и постепенно перейдут к новому бытовому укладу.
@@ -102,9 +92,7 @@
     В проектной документации дом именовался 2-м домом СНК и планировался как многофункциональный комплекс, состоящий из четырёх корпусов, выполняющих разные функции: жилой комплекс, коммунальный центр (в свою очередь, включающий в себя столовую, физкультурный и читальный залы), детский корпус (детский сад и ясли) — он не был построен и впоследствии частично занял корпус столовой и библиотеки, и самостоятельного служебного двора с размещенными на его территории механической прачечной, сушилкой, гаражом и др. Дом должна была окружать обширная парковая территория.
   </p>
 <h3 id ="space organization">Пространственная организация жилого комплекса</h3>
-  <p>
-    Пространство перед общественным корпусом композиционно выделялось квадратной площадкой,на которой планировалось разместить небольшое здание для детского сада.Все три объема,различные по массам,строго ритмически уравновешенные,увязанные между собой,составляли композиционное ядро комплекса,сбалансированное в пространстве корпусом прачечной,ориентированным на Новинский бульвар.Перед прачечной также была устроена квадратная площадка,служившая своеобразным парадным пространством,связывающим комплекс с городом.Корпус прачечной так же,как и жилой дом,был частично поднят на колоннах,что освобождало для прохода пространство первого этажа.Пройдя под корпусом прачечной через "парадный двор" перед входом с Новинского бульвара, по диагональной аллее можно было попасть в общественную зону комплекса или по другой аллее через жилой корпус в уровне "открытого" первого этажа - в парк за домом,где была организована своеобразная видовая площадка.
-  </p>
+   <p>Пространство перед общественным корпусом композиционно выделялось квадратной площадкой, на которой планировалось разместить небольшое здание для детского сада. Все три объёма, различные по массам, строго ритмически уравновешенные, увязанные между собой, составляли композиционное ядро комплекса, сбалансированное в пространстве корпусом прачечной, ориентированным на Новинский бульвар. Перед прачечной также была устроена квадратная площадка, служившая своеобразным парадным пространством, связывающим комплекс с городом. Корпус прачечной так же, как и жилой дом, был частично поднят на колоннах, что освобождало для прохода пространство первого этажа. Пройдя под корпусом прачечной через «парадный двор» перед входом с Новинского бульвара, по диагональной аллее можно было попасть в общественную зону комплекса или по другой аллее через жилой корпус в уровне «открытого» первого этажа — в парк за домом, где была организована своеобразная видовая площадка.</p>
   <p>
     Основной объём жилого дома Гинзбург расположил на территории двух усадебных садов, отмечая в пояснительной записке к проекту:
   </p>
