--- a/ Narkomfin.html
+++ b/ Narkomfin.html
@@ -18,6 +18,7 @@
   <p>
     Здание находится в аварийном состоянии и уже трижды включалось в список «100 главных зданий мира, которым грозит уничтожение».
   </p>
+  <img src="images/narkomfin.jpg" alt="">
 <!-- <center>
 <h3>Содержание</h3>
 </center>
