--- a/centrosouz.html
+++ b/centrosouz.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Здание Центросоюза</title>
-  <link rel="stylesheet" href="Styles/reset.css">
   <link rel="stylesheet" href="Styles/Style.css">
 </head>
 <h1 style=”font-size: 60px;”>Здание Центросоюза</h1>
@@ -22,7 +21,7 @@
     Идея строительства здания для размещения <a target="_blank" href="https://ru.wikipedia.org/wiki/Центросоюз">Центросоюза</a> возникла во времена <a target="_blank" href="https://ru.wikipedia.org/wiki/Новая_экономическая_политика">НЭПа</a>, когда основой экономики стали различные кооперативные общества. Под новое здание по предложению архитектора <a target="_blank" href="https://ru.wikipedia.org/wiki/Великовский,_Борис_Михайлович">Б. М. Великовского</a> в 1925 году выбрали место между двумя параллельными улицами — Мясницкой и планируемой к прокладке Ново-<a target="_blank" href="https://ru.wikipedia.org/wiki/Мясницкая_улица">Мясницкой улицей</a> (ныне — проспект Академика Сахарова), на их пересечении с проектируемым бульваром, идущим от <a target="_blank" href="https://ru.wikipedia.org/wiki/Переулок_Огородная_Слобода">Огородной Слободы</a>.
   </p>
   <p>
-    На проектирование здания в 1928 году был объявлен международный открытый конкурс, в котором приняли участие братья Александр и Виктор Веснины, Б. М. Великовский, С. Е. Чернышёв, И. И. Леонидов, А. Д. Крячков и другие. Конкурс проходил в три этапа и в первом из них одержал победу Б. М. Великовский. Однако по результатам всех трёх этапов победу одержал Ле Корбюзье.
+    На проектирование здания в 1928 году был объявлен международный открытый конкурс, в котором приняли участие братья <a target="_blank" href="https://ru.wikipedia.org/wiki/Веснин,_Александр_Александрович">Александр и Виктор Веснины</a>, Б. М. Великовский, С. Е. Чернышёв, И. И. Леонидов, А. Д. Крячков и другие. Конкурс проходил в три этапа и в первом из них одержал победу Б. М. Великовский. Однако по результатам всех трёх этапов победу одержал Ле Корбюзье.
   </p>
   <p>
     Здание Центросоюза — один из первых в Европе больших офисных комплексов со сплошным остеклением. Первое, что бросается в глаза при подходе к нему, — это гигантские поверхности стекла на фасадах, открытые стойки-опоры, поддерживающие блоки офисов, свободные пространства первого этажа (под зданием можно свободно пройти), горизонтальные крыши, красновато-коричневая облицовка стен из розового артикского туфа. Всё это — характерные особенности творческой манеры Ле Корбюзье начала 30-х годов (за исключением разве что облицовки), яркая иллюстрация его же известных «Пяти отправных точек современной архитектуры». В зданиях комплекса предусмотрены рабочие места для 3500 служащих, а также большой конференц-зал (выделенный отдельным блоком), клубные помещения, читальный зал, ресторан и многое другое. В первом этаже расположен просторный входной вестибюль, с открытыми лестницами и пандусами (наклонными пешеходными рампами) для связи между этажами.
