--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
            </h2>
 
            <p>
-             Чтобы начать изучать веб-вёрстку на этом проекте<br class="compact">
-             не требуется каких-то специальных знаний, кроме<br class="compact">
+             Чтобы начать изучать веб-вёрстку на этом проекте
+             не требуется каких-то специальных знаний, кроме
              базового умения пользоваться компьютером.
            </p>
 
@@ -110,4 +110,5 @@
      </section>
 </body>
 <script src="javascripts/jquery-3.2.1.js"></script>
+<script src="javascripts/social-likes.min.js"></script>
 </html>
