--- a/index.html
+++ b/index.html
@@ -9,24 +9,22 @@
 </head>
 <body class="landing">
   <nav class="menubar">
-    <a href="" class="logo"></a>
-    <a href="" class="about">О проекте</a>
+    <a href="posts.html" class="logo"></a>
+    <a href="index.html" class="about">О проекте</a>
   </nav>
   <section class="landingWrapper">
        <section class="mainSection left">
          <section>
            <h2>
-             Наглядный пример,<br>
-             чтобы учиться веб-вёрстке.
+             Наглядный пример, чтобы учиться веб-вёрстке.
            </h2>
 
            <p>
-             Проект, разработанный командой Hæd Exchange,<br>
-             для обучения основам веб-вёрстки в рамках<br>
+             Проект, разработанный командой Hæd Exchange,
+             для обучения основам веб-вёрстки в рамках
              образовательного проекта Hack Exchange.
            </p>
 
-           <figure></figure>
          </section>
 
          <figure class="mockup" id="mockup1"></figure>
@@ -36,8 +34,8 @@
          <section>
 
            <h2>
-             С нуля до первого сайта<br>
-             под компьютеры, смартфоны<br>
+             С нуля до первого сайта
+             под компьютеры, смартфоны
              и планшеты.
            </h2>
 
@@ -57,15 +55,15 @@
          <section>
 
            <h2>
-             Реальный проект, реальный<br>
+             Реальный проект, реальный
              рабочий процесс.
            </h2>
 
            <p>
-             Обучение приближено к работе в реальной<br>
-             жизни. Работа разбита на этапы от типографики,<br>
-             создания меню и использования эффектов,<br> 
-             до адаптации под мобильные устройства <br>
+             Обучение приближено к работе в реальной
+             жизни. Работа разбита на этапы от типографики,
+             создания меню и использования эффектов,
+             до адаптации под мобильные устройства 
              и использования скриптов.
            </p>
 
@@ -108,7 +106,7 @@
          </footer>
        </section>
      </section>
+     <script src="javascripts/jquery-3.2.1.js"></script>
+     <script src="javascripts/social-likes.min.js"></script>
 </body>
-<script src="javascripts/jquery-3.2.1.js"></script>
-<script src="javascripts/social-likes.min.js"></script>
 </html>
